Add sol differences and benefits

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <body>
 
 	<div class="jumbotron cream-bg">
-			<div class="container title-container">
-					<div class="row">
-						<div class="col">
-							<h1 class="header-title">The Sol Calendar</h1>
-							<h2 class="header-subtitle">The Gregorian Calendar is broken.<br>It's time for a change.</h2>
-					</div>
+		<div class="container">
+				<div class="row">
+					<div class="col">
+						<h1 class="header-title">The Sol Calendar</h1>
+						<h2 class="header-subtitle">The Gregorian Calendar is broken.<br>It's <i class="underline">time</i> for a change.</h2>
 				</div>
 			</div>
+		</div>
 	</div>
 
 	<div class="jumbotron white-bg">
@@ -43,17 +43,32 @@
 			</div>
 		</div>
 	</div>
-	
-	<div class="container title-container">
+
+	<div class="jumbotron cream-bg">
+		<div class="container title-container">
 			<div class="row">
 				<div class="col-md-6">
 					<h1 class="title">What does Sol do differently?</h1>
 				</div>
 				<div class="col-md-6">
-					<h2 class="subtitle">Given 365 Earth rotations in a full orbit around the Sun, the Sol calendar creates 13 months of 28 days, and 1 day-less, date-less and month-less day (+1 on leap years). This ensures that each month is exactly 4 weeks long, and the nth of any month will always land on the same day, regardless of the month or year.</h2>
+					<h2 class="subtitle">Given approx. 365 Earth rotations in a full orbit around the Sun, the Sol calendar creates <span class="underline">12 months</span> of <span class="underline">28 days</span>, and 1 day-less, date-less and month-less day (an extra on leap years). </h2>
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="jumbotron white-bg">
+		<div class="container title-container">
+			<div class="row">
+				<div class="col">
+					<h1 class="title center">Why is it better?</h1>
+					<h2 class="subtitle">The Sol calendar ensures that each month is exactly 4 weeks long, and the <i>n</i><sup>th</sup> of any month will always land on the same day, regardless of the month or year.</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
 	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
