Add What it Looks Like and help the cause sub headers

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 					<h2 class="subtitle">Our current calendar is a uneven hodgepodge, primed for disaster. Completely unintuitive to humans, it serves only one purpose, to maximise profits of Big Gregory, the calendar cartel.</h2>
 				</div>
 				<div class="col-md-6">
-					<h1 class="title">Why the calendar is broken</h1>
+					<h1 class="title">Why the calendar is broken.</h1>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="jumbotron cream-bg">
-		<div class="container title-container">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
 					<h1 class="title">What does Sol do differently?</h1>
@@ -58,11 +58,37 @@
 	</div>
 
 	<div class="jumbotron white-bg">
-		<div class="container title-container">
+		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1 class="title center">Why is it better?</h1>
+					<h1 class="title">Why is it better?</h1>
 					<h2 class="subtitle">The Sol calendar ensures that each month is exactly 4 weeks long, and the <i>n</i><sup>th</sup> of any month will always land on the same day, regardless of the month or year.</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="jumbotron cream-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h1 class="title center">What it looks like</h1>
+					<h4 class="center">{insert photo here}</h4>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="jumbotron green-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h1 class="cream-text title center">How can I help the cause?</h1>
+					<h2 class="cream-text subtitle center">
+						1. Boycott organisations that refuse to move away from the Gregorian Calendar.<br>
+						2. Run for elected office.<br>
+						3. Become Dictator of the Roman Republic.
+					</h2>
 				</div>
 			</div>
 		</div>
