--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h2 class="subtitle">Our current calendar is a uneven hodgepodge, primed for disaster. Completely unintuitive to humans, it serves only one purpose, to maximise profits of Big Gregory, the calendar cartel.</h2>
+					<h2 class="subtitle">Our current calendar is an uneven hodgepodge, primed for disaster. Completely unintuitive to humans, it serves only one purpose, to maximise profits of Big Gregory, the calendar cartel.</h2>
 				</div>
 				<div class="col-md-6">
 					<h1 class="title">Why the calendar is broken.</h1>
