--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
 	<title>Sol.</title>
 	<meta name="description" content="The Sol Calendar">
-	
+
 	<link rel="stylesheet" href="css/bootstrap.min.css?v=1.0">
-	<link rel="stylesheet" href="css/main.css?v=1.0">
+	<link rel="stylesheet" href="css/main.css?v=1.1">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" integrity="sha256-00w68NO3TLuHjKRHJmjrrgJBDtG/6OhbJEu1gtHcsuo=" crossorigin="anonymous" />
 
 	<!--[if lt IE 9]>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 	<![endif]-->
-	
+
 </head>
 
 <body>
@@ -35,10 +35,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h2 class="subtitle">Our current calendar is an uneven hodgepodge, primed for disaster. Completely unintuitive to humans, it serves only one purpose, to maximise profits of Big Gregory, the calendar cartel.</h2>
+					<h2 class="subtitle white-bg-text">Our current calendar is an uneven hodgepodge, primed for disaster. Completely unintuitive to humans, it serves only one purpose, to maximise profits of Big Gregory, the calendar cartel.</h2>
 				</div>
 				<div class="col-md-6">
-					<h1 class="title">Why the calendar is broken.</h1>
+					<h1 class="title white-bg-text">Why the calendar is broken.</h1>
 				</div>
 			</div>
 		</div>
@@ -61,8 +61,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h1 class="title">Why is it better?</h1>
-					<h2 class="subtitle">The Sol calendar ensures that each month is exactly 4 weeks long, and the <i>n</i><sup>th</sup> of any month will always land on the same day, regardless of the month or year.</h2>
+					<h1 class="title white-bg-text">Why is it better?</h1>
+					<h2 class="subtitle white-bg-text">The Sol calendar ensures that each month is exactly 4 weeks long, and the <i>n</i><sup>th</sup> of any month will always land on the same day, regardless of the month or year.</h2>
 				</div>
 			</div>
 		</div>
@@ -78,7 +78,7 @@
 						  <li><span class="month-title underline"></span></li>
 						</ul>
 					  </div>
-					  
+
 					  <ul class="weekdays">
 						<li>Mo</li>
 						<li>Tu</li>
@@ -88,7 +88,7 @@
 						<li>Sa</li>
 						<li>Su</li>
 					  </ul>
-					  
+
 					  <ul class="days">
 						<li>1</li>
 						<li>2</li>
@@ -118,12 +118,12 @@
 						<li>26</li>
 						<li>27</li>
 						<li>28</li>
-					  </ul> 
+					  </ul>
 				</div>
 			</div>
 		</div>
-	</div>	
-	
+	</div>
+
 	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
